<resources>
    <string name="app_name">EasyssTun</string>
    <string name="easyss_server">Easyss Server Address</string>
    <string name="easyss_serverport">Easyss Server Port</string>
    <string name="easyss_password">Easyss Password</string>
    <string name="service_enable">Start</string>
    <string name="service_disable">Stop</string>

    <string name="service_running">EasyssTun is Running</string>
    <string name="service_stopped">EasyssTun is Stopped</string>
    <string name="skipped_app_list">Skipped %s Applications </string>
    <string name="delay_test_result">Test Result: %s</string>

    <string name="delay_test_fail">Fail, Check Configure</string>

    <string name="choose_app_to_bypass">Tap to selected SKIP applications.</string>
    <string name="easyss_configure">Configure</string>
    <string name="speedtest_placeholder">Test Speed</string>
    <string name="speedtest_summary">Tap to Test Connection Speed of EasyssTun.</string>
    <string name="applist_title">Choose Skip APPs</string>
    <string name="log_title">Easyss Log</string>
    <string name="easyss_configure_title">Easyss Configure</string>
    <string name="route_desc">By default, EasysTun will skip LAN addresses and traffic for this application. At the same time, the applications selected above will also be skipped. \n\nTraffic other than the above situations will be taken over by Easyss.</string>
    <string name="app_name_placeholder">PackageName</string>
    <string name="easyss_need_config">Easyss Server Not Configured</string>
    <string name="easyss_encryption">Easyss encryption method</string>
    <string name="easyss_proxyrule">Easyss Proxy Rule</string>
    <string name="easyss_outbound">Easyss Outbound Proto</string>
    <string name="easyss_loglevel">Easyss Log Level</string>
    <string name="easyss_disable_quic">Easyss Disable QUIC</string>
    <string name="easyss_custom_ca">Easyss Custom CA</string>
    <string name="not_set">Not Set</string>
    <string name="easyss_name">Server Name (Optional)</string>
    <string name="servers_title">Servers</string>
    <string name="add_server">Add Server</string>
    <string name="edit_server">Edit Server</string>
    <string name="delete_server">Delete Server</string>
    <string name="server_name">Server Name</string>
    <string name="dialog_delete_title">Delete Server</string>
    <string name="dialog_delete_message">Are you sure you want to delete this server?</string>
    <string name="dialog_add_title">Add Server</string>
    <string name="dialog_edit_title">Edit Server Name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="easyss_version">Easyss Core Version</string>
    <string name="easyss_direct_domains">Direct Domains &amp; IPs (one per line)</string>
    <string name="easyss_proxy_domains">Proxy Domains &amp; IPs (one per line)</string>
    <string name="app_routing_mode">App Proxy Mode</string>
    <string name="show_system_apps">Show System Apps</string>
    <string name="routing_mode_bypass">Bypass Selected Apps</string>
    <string name="routing_mode_proxy">Proxy Selected Apps Only</string>
    <string name="proxied_app_list">Proxied %s Applications</string>
    <string name="choose_app_to_proxy">Tap to selected PROXY applications.</string>
    <string name="applist_title_proxy">Choose Proxy APPs</string>
    <string name="route_desc_proxy">By default, EasyssTun will bypass LAN and its own traffic. Also, only the above selected applications will route through the VPN.\n\nAll other applications will bypass VPN.</string>
    <string name="app_routing_mode_bypass_desc">Checked apps connect directly, others route through VPN.</string>
    <string name="app_routing_mode_proxy_desc">Only checked apps route through VPN, others connect directly.</string>
</resources>