<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.musan.easysstun.SettingsFragment"
        android:label="@string/easyss_configure_title">
        <argument
            android:name="server_id"
            app:argType="string"
            android:defaultValue="default" />
        <action
            android:id="@+id/action_nav_setting_to_applist"
            app:destination="@+id/AppListFragment" />
    </fragment>

    <fragment
        android:id="@+id/AppListFragment"
        android:name="com.musan.easysstun.AppListFragment"
        android:label="@string/applist_title">
    </fragment>

    <fragment
        android:id="@+id/LogFragment"
        android:name="com.musan.easysstun.LogFragment"
        android:label="@string/log_title">
    </fragment>

    <fragment
        android:id="@+id/ServersFragment"
        android:name="com.musan.easysstun.ServersFragment"
        android:label="@string/servers_title">
        <action
            android:id="@+id/action_servers_to_setting"
            app:destination="@+id/SettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.musan.easysstun.MainFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_main_to_servers"
            app:destination="@+id/ServersFragment" />

        <action
            android:id="@+id/action_main_to_applist"
            app:destination="@+id/AppListFragment" />

        <action
            android:id="@+id/action_main_to_log"
            app:destination="@+id/LogFragment" />

        <action
            android:id="@+id/action_main_to_tailscale"
            app:destination="@+id/TailscaleFragment" />
    </fragment>

    <fragment
        android:id="@+id/TailscaleFragment"
        android:name="com.musan.easysstun.TailscaleFragment"
        android:label="Tailscale 配置">
    </fragment>

</navigation>